--- a/intro-to-sparklyr.Rmd
+++ b/intro-to-sparklyr.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Sparklyr Introduction"
-output: rmarkdown::github_document
+output: html_notebook
 ---
 
 In this notebook we walk through some basic examples of how to use sparklyr in R. This notebook is based on the guide provided at http://spark.rstudio.com/. 
